[package]
name = "number_collect_maze"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"

[[bin]]
name = "number_collect_maze"
path = "src/number_collect_maze.rs"

[[bin]]
name = "auto_number_collect_maze"
path = "src/auto_number_collect_maze.rs"
